# hop

./: README.md  install.sh  pyproject.toml
hop/: cli.py  config.py  gitinfo.py  letters.py  ui.py
shell/: hop.sh
